fixed alignment

--- a/trunkstyle.css
+++ b/trunkstyle.css
@@ -4,6 +4,7 @@
 	text-align: center;
 	background-color: darkgray;
 	width: 100%;
+	vertical-align: middle;
 }
 
 .container {
@@ -20,6 +21,10 @@
 }
 
 .logout-button{
+	padding-left: 5px;
+	padding-right: 5px;
+	padding-bottom: 2px;
+	padding-top: 2px;
 	text-align: center;
 	height: 35px;
 	width: 55px;
@@ -114,6 +119,10 @@
 	border-style: solid;
 	border-width: 3px;
 	border-color: blue;
+}
+
+.username{
+	
 }
 
 a:link {
